Fixed issue: Unable to populate OEBS keyswords(button, input, select, scrollbar, radiobutton, checkbox,list) in the testcase.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1439,7 +1439,7 @@ input[disabled]{
 
 .popupContent-filter div span {
     display: inline-block;
-    padding: 0px 20px 0 15px;
+    padding: 0px 20px 0 12px;
     cursor: pointer;
     margin-bottom: 15px;
     border-radius: 20px;
